Fixed extra padding at the bottom of the Projects div

--- a/public_html/css/index.css
+++ b/public_html/css/index.css
@@ -144,7 +144,6 @@ body {
 .divProjects {
 	width: 1300px;
 	margin: auto;
-	padding-bottom: 500px;
 }
 
 #SQLDiv {
